base HTML content

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,87 @@
 </head>
 <body>
 
-<h1>Hello!</h1>
+<section class="o-grid__container">
+  <article class="o-grid__row">
+
+    <header>
+      <h1>Welcome to testing place!</h1>
+    </header>
+
+    <div class="o-grid__item o-grid__item--3-of-4">
+      <p class="o-grid__item o-grid__item--1-of-2">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Cum dolore dolorem expedita molestiae odio porro quibusdam unde.
+        Eligendi excepturi ipsum mollitia quae saepe? Dolorem fuga ipsa labore quo vel veniam?
+        Aliquam consequuntur cumque esse, exercitationem facilis harum quibusdam.
+        Adipisci, debitis fugiat in nihil repellat similique sint tempora? Error eum non quo vero!
+      </p>
+      <p class="o-grid__item o-grid__item--1-of-2">
+        A dolor, tempore? Aliquid aspernatur assumenda commodi,
+        distinctio exercitationem itaque iure labore maiores maxime,
+        minus necessitatibus omnis porro possimus sint voluptates? Perferendis?
+        Aliquid doloremque iusto omnis sequi! Accusamus at cum eum expedita maiores,
+        nulla quae voluptates. Asperiores consequuntur deleniti iusto laudantium perferendis quae quo!
+      </p>
+    </div>
+
+    <aside class="o-grid__item o-grid__item--1-of-4">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Animi aspernatur dicta distinctio, ea exercitationem iste itaque labore libero mollitia
+        numquam officia quaerat quas quod sint tempora ullam ut veritatis? Beatae!
+      </p>
+    </aside>
+
+  </article>
+</section>
+
+<section class="o-grid__container">
+  <article class="o-grid__row">
+
+    <header>
+      <h1>Accordion To Tabs component</h1>
+    </header>
+
+    <div class="c-accordion-to-tabs">
+    </div>
+  </article>
+</section>
+
+<section class="o-grid__container">
+  <article class="o-grid__row">
+
+    <header>
+      <h2>Something else</h2>
+    </header>
+
+    <div class="o-grid__item o-grid__item--1-of-3">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+        Cum dolore dolorem expedita molestiae odio porro quibusdam unde.
+        Eligendi excepturi ipsum mollitia quae saepe? Dolorem fuga ipsa labore quo vel veniam?
+        Aliquam consequuntur cumque esse, exercitationem facilis harum quibusdam.
+        Adipisci, debitis fugiat in nihil repellat similique sint tempora? Error eum non quo vero!
+      </p>
+    </div>
+
+    <aside class="o-grid__item o-grid__item--2-of-3">
+      <p>
+        A dolor, tempore? Aliquid aspernatur assumenda commodi,
+        distinctio exercitationem itaque iure labore maiores maxime,
+        minus necessitatibus omnis porro possimus sint voluptates? Perferendis?
+        Aliquid doloremque iusto omnis sequi! Accusamus at cum eum expedita maiores,
+        nulla quae voluptates. Asperiores consequuntur deleniti iusto laudantium perferendis quae quo!
+        A dolor, tempore? Aliquid aspernatur assumenda commodi,
+        distinctio exercitationem itaque iure labore maiores maxime,
+        minus necessitatibus omnis porro possimus sint voluptates? Perferendis?
+        Aliquid doloremque iusto omnis sequi! Accusamus at cum eum expedita maiores,
+        nulla quae voluptates. Asperiores consequuntur deleniti iusto laudantium perferendis quae quo!
+      </p>
+    </aside>
+
+  </article>
+</section>
 
 </body>
 </html>
