accordion-to-tabs component HTML

--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <title>component test</title>
 </head>
@@ -52,6 +53,78 @@
     </header>
 
     <div class="c-accordion-to-tabs">
+
+      <input tab-select type="radio" name="unique-group-name" id="unique-option1" checked>
+      <label tab-name for="unique-option1" icon="&#xe878">First option</label>
+      <div tab-content>
+        <h3>Heading one</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Autem commodi debitis distinctio dolore enim explicabo fugit
+          impedit itaque labore maxime necessitatibus neque numquam
+          porro possimus quos, ratione reprehenderit similique ullam!
+        </p>
+        <p>
+          Ad deserunt, earum eum fugiat laudantium rerum tempore unde!
+          Asperiores, aspernatur autem deserunt doloribus earum eligendi nulla,
+          pariatur quaerat totam unde voluptatum!
+        </p>
+        <p>
+          Architecto asperiores ea eos impedit laboriosam libero
+          omnis placeat quae similique voluptas.
+          A architecto earum impedit iste modi nam,
+          nisi nobis rem sapiente similique.
+        </p>
+      </div>
+
+      <input tab-select type="radio" name="unique-group-name" id="unique-option2">
+      <label tab-name for="unique-option2" icon="&#xe889">Second option</label>
+      <div tab-content>
+        <h3>Heading two</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Autem commodi debitis distinctio dolore enim explicabo fugit
+          impedit itaque labore maxime necessitatibus neque numquam
+          porro possimus quos, ratione reprehenderit similique ullam!
+        </p>
+      </div>
+
+      <input tab-select type="radio" name="unique-group-name" id="unique-option3">
+      <label tab-name for="unique-option3" icon="&#xe90f">Third option</label>
+      <div tab-content>
+        <h3>Heading three</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Autem commodi debitis distinctio dolore enim explicabo fugit
+          impedit itaque labore maxime necessitatibus neque numquam
+          porro possimus quos, ratione reprehenderit similique ullam!
+        </p>
+        <p>
+          Architecto asperiores ea eos impedit laboriosam libero
+          omnis placeat quae similique voluptas.
+          A architecto earum impedit iste modi nam,
+          nisi nobis rem sapiente similique.
+        </p>
+      </div>
+
+      <input tab-select type="radio" name="unique-group-name" id="unique-option4">
+      <label tab-name for="unique-option4" icon="&#xe87c">Forth option</label>
+      <div tab-content>
+        <h3>Heading four</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Autem commodi debitis distinctio dolore enim explicabo fugit
+          impedit itaque labore maxime necessitatibus neque numquam
+          porro possimus quos, ratione reprehenderit similique ullam!
+        </p>
+        <p>
+          Architecto asperiores ea eos impedit laboriosam libero
+          omnis placeat quae similique voluptas.
+          A architecto earum impedit iste modi nam,
+          nisi nobis rem sapiente similique.
+        </p>
+      </div>
+
     </div>
   </article>
 </section>
