accordion-to-tabs component: lower the specificity

--- a/app/index.html
+++ b/app/index.html
@@ -52,11 +52,11 @@
       <h1>Accordion To Tabs component</h1>
     </header>
 
-    <div class="c-accordion-to-tabs">
+    <div class="c-tabs">
 
-      <input tab-select type="radio" name="unique-group-name" id="unique-option1" checked>
-      <label tab-name for="unique-option1" icon="&#xe878">First option</label>
-      <div tab-content>
+      <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option1" checked>
+      <label class="c-tabs__name" for="unique-option1" icon="&#xe878">First option</label>
+      <div class="c-tabs__content">
         <h3>Heading one</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -77,9 +77,9 @@
         </p>
       </div>
 
-      <input tab-select type="radio" name="unique-group-name" id="unique-option2">
-      <label tab-name for="unique-option2" icon="&#xe889">Second option</label>
-      <div tab-content>
+      <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option2">
+      <label class="c-tabs__name" for="unique-option2" icon="&#xe889">Second option</label>
+      <div class="c-tabs__content">
         <h3>Heading two</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -89,9 +89,9 @@
         </p>
       </div>
 
-      <input tab-select type="radio" name="unique-group-name" id="unique-option3">
-      <label tab-name for="unique-option3" icon="&#xe90f">Third option</label>
-      <div tab-content>
+      <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option3">
+      <label class="c-tabs__name" for="unique-option3" icon="&#xe90f">Third option</label>
+      <div class="c-tabs__content">
         <h3>Heading three</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
@@ -107,9 +107,9 @@
         </p>
       </div>
 
-      <input tab-select type="radio" name="unique-group-name" id="unique-option4">
-      <label tab-name for="unique-option4" icon="&#xe87c">Forth option</label>
-      <div tab-content>
+      <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option4">
+      <label class="c-tabs__name" for="unique-option4" icon="&#xe87c">Forth option</label>
+      <div class="c-tabs__content">
         <h3>Heading four</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
