build script for js

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
@@ -108,7 +108,7 @@
       </div>
 
       <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option4">
-      <label class="c-tabs__name" for="unique-option4" icon="&#xe87c">Forth option</label>
+      <label class="c-tabs__name" for="unique-option4" icon="&#xe87c">Fourth option</label>
       <div class="c-tabs__content">
         <h3>Heading four</h3>
         <p>
@@ -163,6 +163,12 @@
 
   </article>
 </section>
+
+<!-- build:js -->
+<script src="/jspm_packages/system.js"></script>
+<script src="/js/jspm.config.js"></script>
+<script>System.import('/js/index.js');</script>
+<!-- endbuild -->
 
 </body>
 </html>
