--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Lato:400,700,900|Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <title>component test</title>
 </head>
@@ -49,7 +49,7 @@
   <article class="o-grid__row">
 
     <header>
-      <h1>Accordion To Tabs component</h1>
+      <h1>Static Tabs component</h1>
     </header>
 
     <div class="c-tabs">
@@ -124,6 +124,58 @@
           nisi nobis rem sapiente similique.
         </p>
       </div>
+
+    </div>
+  </article>
+</section>
+
+<section class="o-grid__container">
+  <article class="o-grid__row">
+
+    <header>
+      <h1>AJAX Tabs component</h1>
+      <h3>
+        <strong>Note:</strong> The second tab is deliberately set to not receive any content and, hence, display an error message.
+      </h3>
+    </header>
+
+
+    <div class="c-tabs" data-module="tabs" data-settings="{ 'url': '/tabs/{{id}}.html' }">
+
+      <input class="c-tabs__select" type="radio" name="ajax-group-name" id="ajax-option1" value="123" checked>
+      <label class="c-tabs__name" for="ajax-option1" icon="&#xe878">First option</label>
+      <div class="c-tabs__content">
+        <h3>Heading one</h3>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Autem commodi debitis distinctio dolore enim explicabo fugit
+          impedit itaque labore maxime necessitatibus neque numquam
+          porro possimus quos, ratione reprehenderit similique ullam!
+        </p>
+        <p>
+          Ad deserunt, earum eum fugiat laudantium rerum tempore unde!
+          Asperiores, aspernatur autem deserunt doloribus earum eligendi nulla,
+          pariatur quaerat totam unde voluptatum!
+        </p>
+        <p>
+          Architecto asperiores ea eos impedit laboriosam libero
+          omnis placeat quae similique voluptas.
+          A architecto earum impedit iste modi nam,
+          nisi nobis rem sapiente similique.
+        </p>
+      </div>
+
+      <input class="c-tabs__select" type="radio" name="ajax-group-name" value="234" id="ajax-option2">
+      <label class="c-tabs__name" for="ajax-option2" icon="&#xe889">Second option</label>
+      <div class="c-tabs__content"></div>
+
+      <input class="c-tabs__select" type="radio" name="ajax-group-name" value="345" id="ajax-option3">
+      <label class="c-tabs__name" for="ajax-option3" icon="&#xe90f">Third option</label>
+      <div class="c-tabs__content"></div>
+
+      <input class="c-tabs__select" type="radio" name="ajax-group-name" value="456" id="ajax-option4">
+      <label class="c-tabs__name" for="ajax-option4" icon="&#xe87c">Fourth option</label>
+      <div class="c-tabs__content"></div>
 
     </div>
   </article>
