fixes in webpack.config and gulpfile
+ removed JSPM deps

--- a/app/index.html
+++ b/app/index.html
@@ -217,9 +217,7 @@
 </section>
 
 <!-- build:js -->
-<script src="/jspm_packages/system.js"></script>
-<script src="/js/jspm.config.js"></script>
-<script>System.import('/js/index.js');</script>
+<script src="/build.js"></script>
 <!-- endbuild -->
 
 </body>
