rewrite to Inferno Components

--- a/app/index.html
+++ b/app/index.html
@@ -9,212 +9,175 @@
   <title>component test</title>
 </head>
 <body>
+  <section class="o-grid__container">
+    <article class="o-grid__row">
 
-<section class="o-grid__container">
-  <article class="o-grid__row">
+      <header>
+        <h1>Welcome to testing place!</h1>
+      </header>
 
-    <header>
-      <h1>Welcome to testing place!</h1>
-    </header>
-
-    <div class="o-grid__item o-grid__item--3-of-4">
-      <p class="o-grid__item o-grid__item--1-of-2">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Cum dolore dolorem expedita molestiae odio porro quibusdam unde.
-        Eligendi excepturi ipsum mollitia quae saepe? Dolorem fuga ipsa labore quo vel veniam?
-        Aliquam consequuntur cumque esse, exercitationem facilis harum quibusdam.
-        Adipisci, debitis fugiat in nihil repellat similique sint tempora? Error eum non quo vero!
-      </p>
-      <p class="o-grid__item o-grid__item--1-of-2">
-        A dolor, tempore? Aliquid aspernatur assumenda commodi,
-        distinctio exercitationem itaque iure labore maiores maxime,
-        minus necessitatibus omnis porro possimus sint voluptates? Perferendis?
-        Aliquid doloremque iusto omnis sequi! Accusamus at cum eum expedita maiores,
-        nulla quae voluptates. Asperiores consequuntur deleniti iusto laudantium perferendis quae quo!
-      </p>
-    </div>
-
-    <aside class="o-grid__item o-grid__item--1-of-4">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Animi aspernatur dicta distinctio, ea exercitationem iste itaque labore libero mollitia
-        numquam officia quaerat quas quod sint tempora ullam ut veritatis? Beatae!
-      </p>
-    </aside>
-
-  </article>
-</section>
-
-<section class="o-grid__container">
-  <article class="o-grid__row">
-
-    <header>
-      <h1>Static Tabs component</h1>
-    </header>
-
-    <div class="c-tabs">
-
-      <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option1" checked>
-      <label class="c-tabs__name" for="unique-option1" icon="&#xe878">First option</label>
-      <div class="c-tabs__content">
-        <h3>Heading one</h3>
-        <p>
+      <div class="o-grid__item o-grid__item--3-of-4">
+        <p class="o-grid__item o-grid__item--1-of-2">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Autem commodi debitis distinctio dolore enim explicabo fugit
-          impedit itaque labore maxime necessitatibus neque numquam
-          porro possimus quos, ratione reprehenderit similique ullam!
+          Cum dolore dolorem expedita molestiae odio porro quibusdam unde.
+          Eligendi excepturi ipsum mollitia quae saepe? Dolorem fuga ipsa labore quo vel veniam?
+          Aliquam consequuntur cumque esse, exercitationem facilis harum quibusdam.
+          Adipisci, debitis fugiat in nihil repellat similique sint tempora? Error eum non quo vero!
         </p>
-        <p>
-          Ad deserunt, earum eum fugiat laudantium rerum tempore unde!
-          Asperiores, aspernatur autem deserunt doloribus earum eligendi nulla,
-          pariatur quaerat totam unde voluptatum!
-        </p>
-        <p>
-          Architecto asperiores ea eos impedit laboriosam libero
-          omnis placeat quae similique voluptas.
-          A architecto earum impedit iste modi nam,
-          nisi nobis rem sapiente similique.
+        <p class="o-grid__item o-grid__item--1-of-2">
+          A dolor, tempore? Aliquid aspernatur assumenda commodi,
+          distinctio exercitationem itaque iure labore maiores maxime,
+          minus necessitatibus omnis porro possimus sint voluptates? Perferendis?
+          Aliquid doloremque iusto omnis sequi! Accusamus at cum eum expedita maiores,
+          nulla quae voluptates. Asperiores consequuntur deleniti iusto laudantium perferendis quae quo!
         </p>
       </div>
 
-      <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option2">
-      <label class="c-tabs__name" for="unique-option2" icon="&#xe889">Second option</label>
-      <div class="c-tabs__content">
-        <h3>Heading two</h3>
+      <aside class="o-grid__item o-grid__item--1-of-4">
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Autem commodi debitis distinctio dolore enim explicabo fugit
-          impedit itaque labore maxime necessitatibus neque numquam
-          porro possimus quos, ratione reprehenderit similique ullam!
+          Animi aspernatur dicta distinctio, ea exercitationem iste itaque labore libero mollitia
+          numquam officia quaerat quas quod sint tempora ullam ut veritatis? Beatae!
+        </p>
+      </aside>
+
+    </article>
+  </section>
+
+  <section class="o-grid__container">
+    <article class="o-grid__row">
+
+      <header>
+        <h1>Static Tabs component</h1>
+      </header>
+
+      <div class="c-tabs">
+
+        <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option1" checked>
+        <label class="c-tabs__name" for="unique-option1" icon="&#xe878">First option</label>
+        <div class="c-tabs__content">
+          <h3>Heading one</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Autem commodi debitis distinctio dolore enim explicabo fugit
+            impedit itaque labore maxime necessitatibus neque numquam
+            porro possimus quos, ratione reprehenderit similique ullam!
+          </p>
+          <p>
+            Ad deserunt, earum eum fugiat laudantium rerum tempore unde!
+            Asperiores, aspernatur autem deserunt doloribus earum eligendi nulla,
+            pariatur quaerat totam unde voluptatum!
+          </p>
+          <p>
+            Architecto asperiores ea eos impedit laboriosam libero
+            omnis placeat quae similique voluptas.
+            A architecto earum impedit iste modi nam,
+            nisi nobis rem sapiente similique.
+          </p>
+        </div>
+
+        <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option2">
+        <label class="c-tabs__name" for="unique-option2" icon="&#xe889">Second option</label>
+        <div class="c-tabs__content">
+          <h3>Heading two</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Autem commodi debitis distinctio dolore enim explicabo fugit
+            impedit itaque labore maxime necessitatibus neque numquam
+            porro possimus quos, ratione reprehenderit similique ullam!
+          </p>
+        </div>
+
+        <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option3">
+        <label class="c-tabs__name" for="unique-option3" icon="&#xe90f">Third option</label>
+        <div class="c-tabs__content">
+          <h3>Heading three</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Autem commodi debitis distinctio dolore enim explicabo fugit
+            impedit itaque labore maxime necessitatibus neque numquam
+            porro possimus quos, ratione reprehenderit similique ullam!
+          </p>
+          <p>
+            Architecto asperiores ea eos impedit laboriosam libero
+            omnis placeat quae similique voluptas.
+            A architecto earum impedit iste modi nam,
+            nisi nobis rem sapiente similique.
+          </p>
+        </div>
+
+        <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option4">
+        <label class="c-tabs__name" for="unique-option4" icon="&#xe87c">Fourth option</label>
+        <div class="c-tabs__content">
+          <h3>Heading four</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Autem commodi debitis distinctio dolore enim explicabo fugit
+            impedit itaque labore maxime necessitatibus neque numquam
+            porro possimus quos, ratione reprehenderit similique ullam!
+          </p>
+          <p>
+            Architecto asperiores ea eos impedit laboriosam libero
+            omnis placeat quae similique voluptas.
+            A architecto earum impedit iste modi nam,
+            nisi nobis rem sapiente similique.
+          </p>
+        </div>
+
+      </div>
+    </article>
+  </section>
+
+  <section class="o-grid__container">
+    <article class="o-grid__row">
+
+      <header>
+        <h1>AJAX Tabs component</h1>
+        <h3>
+          <strong>Note:</strong> The second tab is deliberately set to not receive any content and, hence, to display an error message.
+        </h3>
+      </header>
+
+      <div data-module="Tabs" data-props="{ id: 'test-tab', endpoint: '/tabs', detail: 'tab/{uuid}.html' }"></div>
+
+    </article>
+  </section>
+
+
+  <section class="o-grid__container">
+    <article class="o-grid__row">
+
+      <header>
+        <h2>Something else</h2>
+      </header>
+
+      <div class="o-grid__item o-grid__item--1-of-3">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+          Cum dolore dolorem expedita molestiae odio porro quibusdam unde.
+          Eligendi excepturi ipsum mollitia quae saepe? Dolorem fuga ipsa labore quo vel veniam?
+          Aliquam consequuntur cumque esse, exercitationem facilis harum quibusdam.
+          Adipisci, debitis fugiat in nihil repellat similique sint tempora? Error eum non quo vero!
         </p>
       </div>
 
-      <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option3">
-      <label class="c-tabs__name" for="unique-option3" icon="&#xe90f">Third option</label>
-      <div class="c-tabs__content">
-        <h3>Heading three</h3>
+      <aside class="o-grid__item o-grid__item--2-of-3">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Autem commodi debitis distinctio dolore enim explicabo fugit
-          impedit itaque labore maxime necessitatibus neque numquam
-          porro possimus quos, ratione reprehenderit similique ullam!
+          A dolor, tempore? Aliquid aspernatur assumenda commodi,
+          distinctio exercitationem itaque iure labore maiores maxime,
+          minus necessitatibus omnis porro possimus sint voluptates? Perferendis?
+          Aliquid doloremque iusto omnis sequi! Accusamus at cum eum expedita maiores,
+          nulla quae voluptates. Asperiores consequuntur deleniti iusto laudantium perferendis quae quo!
+          A dolor, tempore? Aliquid aspernatur assumenda commodi,
+          distinctio exercitationem itaque iure labore maiores maxime,
+          minus necessitatibus omnis porro possimus sint voluptates? Perferendis?
+          Aliquid doloremque iusto omnis sequi! Accusamus at cum eum expedita maiores,
+          nulla quae voluptates. Asperiores consequuntur deleniti iusto laudantium perferendis quae quo!
         </p>
-        <p>
-          Architecto asperiores ea eos impedit laboriosam libero
-          omnis placeat quae similique voluptas.
-          A architecto earum impedit iste modi nam,
-          nisi nobis rem sapiente similique.
-        </p>
-      </div>
+      </aside>
 
-      <input class="c-tabs__select" type="radio" name="unique-group-name" id="unique-option4">
-      <label class="c-tabs__name" for="unique-option4" icon="&#xe87c">Fourth option</label>
-      <div class="c-tabs__content">
-        <h3>Heading four</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Autem commodi debitis distinctio dolore enim explicabo fugit
-          impedit itaque labore maxime necessitatibus neque numquam
-          porro possimus quos, ratione reprehenderit similique ullam!
-        </p>
-        <p>
-          Architecto asperiores ea eos impedit laboriosam libero
-          omnis placeat quae similique voluptas.
-          A architecto earum impedit iste modi nam,
-          nisi nobis rem sapiente similique.
-        </p>
-      </div>
-
-    </div>
-  </article>
-</section>
-
-<section class="o-grid__container">
-  <article class="o-grid__row">
-
-    <header>
-      <h1>AJAX Tabs component</h1>
-      <h3>
-        <strong>Note:</strong> The second tab is deliberately set to not receive any content and, hence, display an error message.
-      </h3>
-    </header>
-
-
-    <div class="c-tabs" data-module="tabs" data-settings="{ 'url': '/tabs/{{id}}.html' }">
-
-      <input class="c-tabs__select" type="radio" name="ajax-group-name" id="ajax-option1" value="123" checked>
-      <label class="c-tabs__name" for="ajax-option1" icon="&#xe878">First option</label>
-      <div class="c-tabs__content">
-        <h3>Heading one</h3>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-          Autem commodi debitis distinctio dolore enim explicabo fugit
-          impedit itaque labore maxime necessitatibus neque numquam
-          porro possimus quos, ratione reprehenderit similique ullam!
-        </p>
-        <p>
-          Ad deserunt, earum eum fugiat laudantium rerum tempore unde!
-          Asperiores, aspernatur autem deserunt doloribus earum eligendi nulla,
-          pariatur quaerat totam unde voluptatum!
-        </p>
-        <p>
-          Architecto asperiores ea eos impedit laboriosam libero
-          omnis placeat quae similique voluptas.
-          A architecto earum impedit iste modi nam,
-          nisi nobis rem sapiente similique.
-        </p>
-      </div>
-
-      <input class="c-tabs__select" type="radio" name="ajax-group-name" value="234" id="ajax-option2">
-      <label class="c-tabs__name" for="ajax-option2" icon="&#xe889">Second option</label>
-      <div class="c-tabs__content"></div>
-
-      <input class="c-tabs__select" type="radio" name="ajax-group-name" value="345" id="ajax-option3">
-      <label class="c-tabs__name" for="ajax-option3" icon="&#xe90f">Third option</label>
-      <div class="c-tabs__content"></div>
-
-      <input class="c-tabs__select" type="radio" name="ajax-group-name" value="456" id="ajax-option4">
-      <label class="c-tabs__name" for="ajax-option4" icon="&#xe87c">Fourth option</label>
-      <div class="c-tabs__content"></div>
-
-    </div>
-  </article>
-</section>
-
-<section class="o-grid__container">
-  <article class="o-grid__row">
-
-    <header>
-      <h2>Something else</h2>
-    </header>
-
-    <div class="o-grid__item o-grid__item--1-of-3">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-        Cum dolore dolorem expedita molestiae odio porro quibusdam unde.
-        Eligendi excepturi ipsum mollitia quae saepe? Dolorem fuga ipsa labore quo vel veniam?
-        Aliquam consequuntur cumque esse, exercitationem facilis harum quibusdam.
-        Adipisci, debitis fugiat in nihil repellat similique sint tempora? Error eum non quo vero!
-      </p>
-    </div>
-
-    <aside class="o-grid__item o-grid__item--2-of-3">
-      <p>
-        A dolor, tempore? Aliquid aspernatur assumenda commodi,
-        distinctio exercitationem itaque iure labore maiores maxime,
-        minus necessitatibus omnis porro possimus sint voluptates? Perferendis?
-        Aliquid doloremque iusto omnis sequi! Accusamus at cum eum expedita maiores,
-        nulla quae voluptates. Asperiores consequuntur deleniti iusto laudantium perferendis quae quo!
-        A dolor, tempore? Aliquid aspernatur assumenda commodi,
-        distinctio exercitationem itaque iure labore maiores maxime,
-        minus necessitatibus omnis porro possimus sint voluptates? Perferendis?
-        Aliquid doloremque iusto omnis sequi! Accusamus at cum eum expedita maiores,
-        nulla quae voluptates. Asperiores consequuntur deleniti iusto laudantium perferendis quae quo!
-      </p>
-    </aside>
-
-  </article>
-</section>
+    </article>
+  </section>
 
 <!-- build:js -->
 <script src="/build.js"></script>
