--- a/app/tabs/tab/123.html
+++ b/app/tabs/tab/123.html
@@ -1,4 +1,4 @@
-<h1>Heading for tab three</h1>
+<h1>Heading for tab one</h1>
 <p>
   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad, deleniti error eveniet, iste laborum libero minus odit
   omnis pariatur quam repudiandae rerum sequi similique. Adipisci animi asperiores assumenda blanditiis, commodi cumque
