--- a/app/index.html
+++ b/app/index.html
@@ -132,7 +132,7 @@
     <article class="o-grid__row">
 
       <header>
-        <h1>AJAX Tabs component</h1>
+        <h1>Dynamic Tabs component</h1>
         <h3>
           <strong>Note:</strong> The second tab is deliberately set to not receive any content and, hence, to display an error message.
         </h3>
