--- a/app/index.html
+++ b/app/index.html
@@ -138,7 +138,7 @@
         </h3>
       </header>
 
-      <div data-module="Tabs" data-props="{ id: 'test-tab', endpoint: '/tabs', detail: 'tab/{uuid}.html' }"></div>
+      <div data-module="Tabs" data-settings="{ id: 'test-tab', endpoint: '/tabs', detail: 'tab/{id}.html' }"></div>
 
     </article>
   </section>
